# substreams-trumpy

./: Cargo.toml  Makefile  build.rs  substreams.yaml  trumpy-v3-v0.0.0.spkg  trumpy-v3-v0.1.3-beta.spkg
abis/: factory.json
proto/trumpy/v1/: trumpy.proto
src/: db_out.rs  lib.rs  utils.rs
src/abi/: erc721.rs  factory.rs  mod.rs
src/pb/: mod.rs  sf.substreams.v1.rs  trumpy.types.v1.rs
