[package]
name = "trumpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

anyhow = "1"
ethabi = "17.0"
wasm-bindgen = "0.2.79"
prost = "0.11.0"
prost-types = "0.11.0"
hex = "0.4.3"
substreams = "^0.5.0"
substreams-ethereum = "0.8.0"
substreams-database-change = "0.2.0"
num-bigint = "0.4"
bigdecimal = "0.3"
pad = "0.1"
base64 = "0.13.0"
stable-hash_legacy = { version = "0.3.3", package = "stable-hash" }
stable-hash = { version = "0.4.2"}
thiserror = "1.0.25"
num-traits = "0.2.15"
chrono = { version = "0.4", features = [ "std" ], default-features = false }

[build-dependencies]
prost-build = "0.11.0"
anyhow = "1"
substreams-ethereum = "0.8.0"